--- a/assembly.html
+++ b/assembly.html
@@ -477,14 +477,14 @@ the following table:</p>
 <p>
   <table>
     <thead>
-      <tr><th>Statistic</th><th>Hifiasm-B. abyssinicus</th><th>Hifiasm-T. deckeni</th><th>Flye-T. deckeni</th><th>Spades-T. deckeni</th></tr>
+      <tr><th>Statistic</th><th>Hifiasm-<em>B. abyssinicus</em></th><th>Hifiasm-T. deckeni</th><th>Flye-T. deckeni</th><th>Spades-T. deckeni</th></tr>
     </thead>
     <tbody>
-      <tr><td><code>Length</code></td><td>Invoke perl to run a script.</td></tr>
-      <tr><td><code>Number of scaffolds</code></td><td>The path to the perl script to run.</td></tr>
-      <tr><td><code>Scaffold N50</code></td><td>The input FASTA file containing a genome assembly.</td></tr>
-      <tr><td><code>Scaffold L90</code></td><td>This redirects the output from the command specified before it into the file specified after it.</td></tr>
-      <tr><td><code>% N </code></td><td>The desired output file.</td></tr>
+      <tr><td><code>Length</code></td><td>1,132,597,561</td><td>1,030,508,849</td><td>1,868,126,942</td><td>1,097,012,933</td></tr>
+      <tr><td><code>Number of scaffolds</code></td><td>112</td><td>81</td><td>9,479</td><td>14,244</td></tr>
+      <tr><td><code>Scaffold N50</code></td><td>40,274,051</td><td>48,768,445</td><td>731,074</td><td>39,430,287</td></tr>
+      <tr><td><code>Scaffold L50</code></td><td>9</td><td>8</td><td>506</td><td>9</td></tr>
+      <tr><td><code>% N </code></td><td>0.71</td><td>0.00</td><td>0.00</td><td>2.17</td></tr>
     </tbody>
   </table>
 </p>
