--- a/assembly.html
+++ b/assembly.html
@@ -513,7 +513,7 @@ compleasm run \
 
         <figure>
           <img src="Fig3.4.png" alt="Compleasm output for two <em>T. deckeni</em> genomes." />
-          <figcaption>Example completeness summary (placeholder).</figcaption>
+          <figcaption>Fig.3.4: Compleasm output for two <em>T. deckeni</em> genomes.</figcaption>
         </figure>
 <p>What we can see here is that, despite the short read assembly being much more fragmented, we still recover 98% of the universal copy orthologs, identical to the long read alignment. 
   Depending on the questions you are asking, short read assemblies may be sufficient.</p>
