--- a/assembly.html
+++ b/assembly.html
@@ -382,7 +382,7 @@ Here are some important statistics to consider when assessing a fragmented assem
    </p>
 
   <figure>
-    <img src="Fig3.3.png" alt="N50 figure from Assemblathon (placeholder)">
+    <img src="Fig3.3.png" alt="N50 figure from Assemblathon">
     <figcaption>
       Figure 3.3: Scaffold N50. Source: Molecular Ecologist
     </figcaption>
@@ -540,7 +540,7 @@ compleasm run \
 
   <figure>
     <img src="cis_trans_hic.jpg"
-         alt="Hi-C contact map example (placeholder)">
+         alt="Hi-C contact map example">
     <figcaption>
       Fig. 3.7:Example Hi-C contact map showing smooth, uninterrupted diagonal structure 
       indicative of a well-scaffolded chromosome and cis and trans interactions along the chromosomes.
@@ -571,10 +571,10 @@ compleasm run \
 
   <figure>
     <img src="inversion_mosquito_example_Lukyanchikova2025.jpg"
-         alt="Hi-C inversion pattern example (placeholder)">
+         alt="Hi-C inversion pattern example">
     <figcaption>
       Fig. 3.6: Hi-C signature of a genomic inversion, showing mirrored contact patterns 
-      relative to the main diagonal (placeholder).
+      relative to the main diagonal.
     </figcaption>
   </figure>
 
@@ -588,11 +588,10 @@ compleasm run \
   </p>
 
   <figure>
-    <img src="Fig.3.7.png"
-         alt="Hi-C misjoin pattern example (placeholder)">
+    <img src="Fig3.7.png"
+         alt="Hi-C misjoin pattern example">
     <figcaption>
-      Abrupt break in Hi-C contact support characteristic of a misjoin 
-      (placeholder).
+      Abrupt break in Hi-C contact support characteristic of a misjoin.
     </figcaption>
   </figure>
 
