--- a/assembly.html
+++ b/assembly.html
@@ -675,7 +675,7 @@ compleasm run \
     </p>
   </div>
 </section>
-
+      </section>
 
       <!-- FURTHER ANALYSES -->
       <section class="section" id="further">
