--- a/assembly.html
+++ b/assembly.html
@@ -676,6 +676,9 @@ compleasm run \
   </div>
 </section>
       </section>
+    </section>
+</section>
+
 
       <!-- FURTHER ANALYSES -->
       <section class="section" id="further">
