--- a/assembly.html
+++ b/assembly.html
@@ -330,7 +330,7 @@ spades.py \
           <div class="code-block-red">
 flye \
   --pacbio-hifi T_deckeni_reads/pacbio/pacbio_Tdeckeni_chr2_subsample.fastq.gz \
-  --genome-size 0.08 \
+  --genome-size 0.08g \
   --out-dir assemblies/flye-pacbio-chr2 \
   --threads 4
           </div>
