--- a/assembly.html
+++ b/assembly.html
@@ -388,9 +388,7 @@ hifiasm \
           </p>
 
           <div class="code-block-green">
-perl /usr/bin/assemblathon_stats.pl \
-  expected-outputs/assemblies/Tdeckeni_hap2_yahs.out_scaffolds_final.fa \
-  > quality-control/Tdeckeni_hap2_yahs.out_scaffolds_final-assemblathon.txt
+perl /usr/bin/assemblathon_stats.pl expected-outputs/assemblies/Tdeckeni_hap2_yahs.out_scaffolds_final.fa > quality-control/Tdeckeni_hap2_yahs.out_scaffolds_final-assemblathon.txt
           </div>
 
           <p>Then view the output:</p>
